# sqlwhisper

./: .gitignore  OBSERVATIONS.md  PROBLEM.md  README.md  pyproject.toml  workflow.html
db/: test_connection.py
db/migrations/: 1739801183_first_migration.sql
db/testing/: second_migration.sql
examples/: actions.py  end_to_end.py  generate_sql_query.py  validate_sql_query.py  workflow.py  workflow_with_prompt.py
examples/llama_index_building_blocks/: db_raw_reader.py  db_sql_reader.py
populate_db/: artist_loader.py  toy_loader.py  yfinance_loader.py
populate_db/testing/: first_migration.sql  push_data.py  yfinance_basic_example.py
solutions/: problem_1.py
sqlwhisper/: actor.py  actors.py  db_lib.py  evaluator.py  prompts.py  text_sql_pair_examples.py  workflow.py
stockwhisper/: actions.py  actor.py  actors.py  db_lib.py  prompts.py  workflow.py
stockwhisper/simple_examples/: db_llm_reader.py
