[tool.poetry]
name = "sqlwhisper"
version = "0.1.0"
description = ""
authors = ["Nacho114 <17376073+Nacho114@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
yfinance = "^0.2.53"
psycopg2 = "^2.9.10"
pandas = "^2.2.3"
llama-index = "^0.12.18"
llama-index-core = "^0.12.19"
llama-index-utils-workflow = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
